--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Development I</title>
 </head>
 <body>
     <h1>Web Development </h1>
+ <ul>
+     <li>
+         <h2>Labo 2</h2>
+         <ol>
+             <li>
+                 <a href="labo 2/opdracht_3.html">opdracht_3</a>
+             </li>
+     </li>
+         </ol>
+     </li>
+ </ul>
 </body>
 </html>
