--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <h2>Labo 2</h2>
          <ol>
              <li>
-                 <a href="labo 2/opdracht_3.html">opdracht_3</a>
+                 <a href="subpaginas/opdracht_3.html">opdracht_3</a>
              </li>
      </li>
          </ol>
