--- a/subpaginas/opdracht 10.html
+++ b/subpaginas/opdracht 10.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Development I</title>
 </head>
 <body>
- <h1>Opdracht 3</h1>
-<p></p>
+
 </body>
 </html>
