--- a/subpaginas/opdracht 3.html
+++ b/subpaginas/opdracht 3.html
@@ -6,6 +6,8 @@
 </head>
 <body>
  <h1>Opdracht 3</h1>
-<p></p>
+<p>Het verschil zit in de URL, als het via het file:// protocol doet dan toont het waar in de verkenner dat het bestand staat.
+<br>
+   Als je het via het http:// protocol doet dan toont het localhost:63342 en op het einde van de URL nog een heleboel cijfers en letters.</p>
 </body>
 </html>
