--- a/subpaginas/opdracht 4.html
+++ b/subpaginas/opdracht 4.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>Opdracht 4</h1>
+<p>Dit is een test zin met extra spaties      en lege regels
 
+
+    in het HTML document</p>
 </body>
 </html>
