--- a/subpaginas/opdracht 6.html
+++ b/subpaginas/opdracht 6.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 6</h1>
+<p>De eerste is fout doordat het laatste haakje het verkeerde haakje is, het is een "haakje open" en het moet een "haakje toe" zijn.<br>
+   Het tweede is fout omdat het laatste haakje weeral verkeerd is.<br>
+   De derde is fout omdat er normaal na het laatste haakje nog een haakje moet staan.<br>
+   De vierde is fout omdat her voorlaatste haakje alweer verkeerd is, het moet een "haakje toe" zijn en geen "haakje open".</p>
 </body>
 </html>
