--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                  <a href="subpaginas/opdracht 5.html">opdracht 5</a>
              </li>
              <li>
-                 <a href="subpagins/opdracht 6.html">opdracht 6</a>
+                 <a href="subpaginas/opdracht 6.html">opdracht 6</a>
              </li>
              <li>
                  <a href="subpaginas/opdracht 7.html">opdracht 7</a>
