--- a/subpaginas/opdracht 7.html
+++ b/subpaginas/opdracht 7.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 7</h1>
+<p>De eerste is correct genest.<br>
+   De tweede is niet correct genest, het zou {{{[()]}}} moeten zijn.<br>
+   De derde is terug correct genest.<br>
+   De vierde is niet correct genest, in plaats van (){[}] moet het (){[]} zijn.<br>
+   De laatste is ook niet correct, het moet {{([])}} in plaats van {{([]) zijn.</p>
 </body>
 </html>
