--- a/subpaginas/opdracht 8.html
+++ b/subpaginas/opdracht 8.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 8</h1>
+<span>hier komt <strong>een </span><a href="">link</a></strong><span> te staan</span>
+<p>Het is fout omdat er een strong wordt geopend en voor deze wordt gesloten wordt een span gesloten en een a geopend en gesloten.</p>
 </body>
 </html>
