--- a/subpaginas/opdracht 10.html
+++ b/subpaginas/opdracht 10.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 10</h1>
+<p>Het kan veel simpeler door de eerste il te typen en dan pas op het einde na het woord vier de il te sluiten.<br>
+    Al de il's moeten er niet tussen staan om het zelfde te bekomen.</p>
 </body>
 </html>
