--- a/subpaginas/opdracht 12.html
+++ b/subpaginas/opdracht 12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 12</h1>
+<p></p>
 </body>
 </html>
