--- a/subpaginas/opdracht 9.html
+++ b/subpaginas/opdracht 9.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
 </head>
 <body>
-
+<h1>Opdracht 9</h1>
+<h1>Heading 1 (h1)</h1>
+<h2>Heading 2 (h2)</h2>
+<h3>Heading 3 (h3)</h3>
+<h4>Heading 4 (h4)</h4>
+<h5>Heading 5 (h5)</h5>
+<h6>Heading 6 (h6)</h6>
+<!-- Link back to HTML Dog: -->
+<p>
+    <a href="http://www.htmldog.com/examples/">
+        <img src="/images/badge1.gif" alt="HTML Dog">
+    </a>
+</p>
+<p>Ja, ik heb de waarde van src moeten aanpassen zodat het de link legde met de folder images.</p>
 </body>
 </html>
