--- a/subpaginas/opdracht 10.html
+++ b/subpaginas/opdracht 10.html
@@ -8,5 +8,6 @@
 <h1>Opdracht 10</h1>
 <p>Het kan veel simpeler door de eerste il te typen en dan pas op het einde na het woord vier de il te sluiten.<br>
     Al de il's moeten er niet tussen staan om het zelfde te bekomen.</p>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
