--- a/subpaginas/opdracht 11.html
+++ b/subpaginas/opdracht 11.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <h1>Opdracht 11</h1>
-<p></p>
+<p>Ik heb het eerst op mijn eigen laptop gedaan daar zag ik geen language preferences staan, dit vond ik bizar en heb ik het nog eens gedaan op een andere vaste pc.<br>
+Hier zag ik de language preferences wel staan. Zie de printscreen hier onder.</p>
+<img src="../images/Labo2-opdracht11-1.png" alt="printscreen 1" width="800"><br>
+<p>Na het aanpassen van de taal en regio zag ik dat bij de cookies de language preferences nog steeds op nederlands stonden.<br>
+Zie screenshot hier onder.</p>
+<img src="../images/Labo2-opdracht11-2.png" alt="printscreen 2" width="1000"><br>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
