--- a/subpaginas/opdracht 9.html
+++ b/subpaginas/opdracht 9.html
@@ -19,5 +19,6 @@
     </a>
 </p>
 <p>Ja, ik heb de waarde van src moeten aanpassen zodat het de link legde met de folder images.</p>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
