--- a/subpaginas/opdracht 3.html
+++ b/subpaginas/opdracht 3.html
@@ -6,8 +6,9 @@
 </head>
 <body>
  <h1>Opdracht 3</h1>
-<p>Het verschil zit in de URL, als het via het file:// protocol doet dan toont het waar in de verkenner dat het bestand staat.
+<p>Het verschil zit in de URL, als het via het file:// protocol doet dan toont het het volledige pad naar het bestand op de pc.
 <br>
-   Als je het via het http:// protocol doet dan toont het localhost:63342 en op het einde van de URL nog een heleboel cijfers en letters.</p>
+   Als je het via het http:// protocol doet dan toont het localhost:63342 en op het einde van de URL nog een heleboel cijfers en letters als parameter.</p>
+ <a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
