--- a/subpaginas/opdracht 13.html
+++ b/subpaginas/opdracht 13.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 <h1>Opdracht 13</h1>
-<p></p>
+<p>De inhoud van de winkelwagen wordt niet bijgehouden bij local storage of cookies.<br>
+    Waar het wel bewaard wordt is volgens mij op de server van Amazon zelf.<br>
+    Het wordt opgeroepen aan de hand van een unieke waarde die ergens wel bij de cookies opgeslaan is.
+    <br><br>
+    Ik denk dat Amazon weet welke winkelwagen bij mij hoort aan de hand van mijn IP-adres, dat ze aan mijn computer koppelen.
+</p>
 <a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
