--- a/subpaginas/opdracht 4.html
+++ b/subpaginas/opdracht 4.html
@@ -9,6 +9,7 @@
 <p>Dit is een test zin met extra spaties      en lege regels
 
 
-    in het HTML document</p>
+    in het HTML document</p><br>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
