--- a/subpaginas/opdracht 5.html
+++ b/subpaginas/opdracht 5.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Opdracht 5</h1>
-<p>Gebruik &nbsp; en <br/> echter niet voor layout doeleinden, daarvoor gebruiken we immers CSS.</p>
+<p>Gebruik &nbsp; en <br/> echter niet voor layout doeleinden, daarvoor gebruiken we immers CSS.</p><br>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
