--- a/subpaginas/opdracht 6.html
+++ b/subpaginas/opdracht 6.html
@@ -10,6 +10,7 @@
   <br>
    Het tweede is fout omdat het laatste haakje weeral verkeerd is.<br>
    De derde is fout omdat er normaal na het laatste haakje nog een haakje moet staan.<br>
-   De vierde is fout omdat her voorlaatste haakje alweer verkeerd is, het moet een "haakje toe" zijn en geen "haakje open".</p>
+   De vierde is fout omdat her voorlaatste haakje alweer verkeerd is, het moet een "haakje toe" zijn en geen "haakje open".</p><br>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
