--- a/subpaginas/opdracht 7.html
+++ b/subpaginas/opdracht 7.html
@@ -10,6 +10,7 @@
    De tweede is niet correct genest, het zou {{{[()]}}} moeten zijn.<br>
    De derde is terug correct genest.<br>
    De vierde is niet correct genest, in plaats van (){[}] moet het (){[]} zijn.<br>
-   De laatste is ook niet correct, het moet {{([])}} in plaats van {{([]) zijn.</p>
+   De laatste is ook niet correct, het moet {{([])}} in plaats van {{([]) zijn.</p><br>
+<a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
