--- a/subpaginas/opdracht 11.html
+++ b/subpaginas/opdracht 11.html
@@ -11,7 +11,7 @@ Hier zag ik de language preferences wel staan. Zie de printscreen hier onder.</p
 <img src="../images/Labo2-opdracht11-1.png" alt="printscreen 1" width="800"><br>
 <p>Na het aanpassen van de taal en regio zag ik dat bij de cookies de language preferences nog steeds op nederlands stonden.<br>
 Zie screenshot hier onder.</p>
-<img src="../images/Labo2-opdracht11-2.png" alt="printscreen 2" width="1000"><br>
+<img src="../images/Labo2-opdracht11-2.png" alt="printscreen 2" width="1000"><br><br>
 <a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
