--- a/subpaginas/opdracht 12.html
+++ b/subpaginas/opdracht 12.html
@@ -8,7 +8,7 @@
 <h1>Opdracht 12</h1>
 <p>Als ik een artikel selecteerde dan kwam er bij de cookies van lg.com een nieuwe bij genaamd LG5_CompareCart.<br>
     Deze verandert steeds wanneer er een nieuw artikel wordt toegevoegd of een artikel wordt weggehaald.</p>
-<img src="../images/Labo2-opdracht12.png" alt="printscreen 3"><br>
+<img src="../images/Labo2-opdracht12.png" alt="printscreen 3"><br><br>
 <a href="../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
