--- a/Labo 2/subpaginas/opdracht 11.html
+++ b/Labo 2/subpaginas/opdracht 11.html
@@ -12,6 +12,6 @@ Hier zag ik de language preferences wel staan. Zie de printscreen hier onder.</p
 <p>Na het aanpassen van de taal en regio zag ik dat bij de cookies de language preferences nog steeds op nederlands stonden.<br>
 Zie screenshot hier onder.</p>
 <img src="../images/Labo2-opdracht11-2.png" alt="printscreen 2" width="1000"><br><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
