--- a/Labo 2/subpaginas/opdracht 13.html
+++ b/Labo 2/subpaginas/opdracht 13.html
@@ -12,6 +12,6 @@
     <br><br>
     Ik denk dat Amazon weet welke winkelwagen bij mij hoort aan de hand van mijn IP-adres, dat ze aan mijn computer koppelen.
 </p>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
