--- a/Labo 2/subpaginas/opdracht 3.html
+++ b/Labo 2/subpaginas/opdracht 3.html
@@ -9,6 +9,6 @@
 <p>Het verschil zit in de URL, als het via het file:// protocol doet dan toont het het volledige pad naar het bestand op de pc.
 <br>
    Als je het via het http:// protocol doet dan toont het localhost:63342 en op het einde van de URL nog een heleboel cijfers en letters als parameter.</p>
- <a href="../index.html">Terug naar hoofdpagina</a>
+ <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
