--- a/Labo 2/subpaginas/opdracht 4.html
+++ b/Labo 2/subpaginas/opdracht 4.html
@@ -10,6 +10,6 @@
 
 
     in het HTML document</p><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
