--- a/Labo 2/subpaginas/opdracht 6.html
+++ b/Labo 2/subpaginas/opdracht 6.html
@@ -11,6 +11,6 @@
    Het tweede is fout omdat het laatste haakje weeral verkeerd is.<br>
    De derde is fout omdat er normaal na het laatste haakje nog een haakje moet staan.<br>
    De vierde is fout omdat her voorlaatste haakje alweer verkeerd is, het moet een "haakje toe" zijn en geen "haakje open".</p><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
