--- a/Labo 2/subpaginas/opdracht 7.html
+++ b/Labo 2/subpaginas/opdracht 7.html
@@ -11,6 +11,6 @@
    De derde is terug correct genest.<br>
    De vierde is niet correct genest, in plaats van (){[}] moet het (){[]} zijn.<br>
    De laatste is ook niet correct, het moet {{([])}} in plaats van {{([]) zijn.</p><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
