--- a/Labo 2/subpaginas/opdracht 8.html
+++ b/Labo 2/subpaginas/opdracht 8.html
@@ -8,6 +8,6 @@
 <h1>Opdracht 8</h1>
 <span>hier komt <strong>een </span><a href="">link</a></strong><span> te staan</span>
 <p>Het is fout omdat er een strong wordt geopend en voor deze wordt gesloten wordt een span gesloten en een a geopend en gesloten.</p><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
