--- a/Labo 2/subpaginas/opdracht 5.html
+++ b/Labo 2/subpaginas/opdracht 5.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Opdracht 5</h1>
 <p>Gebruik &nbsp; en <br/> echter niet voor layout doeleinden, daarvoor gebruiken we immers CSS.</p><br>
-<a href="../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
