--- a/index.html
+++ b/index.html
@@ -11,37 +11,51 @@
          <h2>Labo 2</h2>
          <ol>
              <li>
-                 <a href="subpaginas/opdracht 3.html">opdracht 3</a>
+                 <a href="Labo 2/subpaginas/opdracht 3.html">opdracht 3</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 4.html">opdracht 4</a>
+                 <a href="Labo 2/subpaginas/opdracht 4.html">opdracht 4</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 5.html">opdracht 5</a>
+                 <a href="Labo 2/subpaginas/opdracht 5.html">opdracht 5</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 6.html">opdracht 6</a>
+                 <a href="Labo 2/subpaginas/opdracht 6.html">opdracht 6</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 7.html">opdracht 7</a>
+                 <a href="Labo 2/subpaginas/opdracht 7.html">opdracht 7</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 8.html">opdracht 8</a>
+                 <a href="Labo 2/subpaginas/opdracht 8.html">opdracht 8</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 9.html">opdracht 9</a>
+                 <a href="Labo 2/subpaginas/opdracht 9.html">opdracht 9</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 10.html">opdracht 10</a>
+                 <a href="Labo 2/subpaginas/opdracht 10.html">opdracht 10</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 11.html">opdracht 11</a>
+                 <a href="Labo 2/subpaginas/opdracht 11.html">opdracht 11</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 12.html">opdracht 12</a>
+                 <a href="Labo 2/subpaginas/opdracht 12.html">opdracht 12</a>
              </li>
              <li>
-                 <a href="subpaginas/opdracht 13.html">opdracht 13</a>
+                 <a href="Labo 2/subpaginas/opdracht 13.html">opdracht 13</a>
+             </li>
+         </ol>
+     </li>
+     <li>
+         <h2>Labo 3</h2>
+         <ol>
+             <li>
+                 <a href="Labo 3/Opdracht 1.html">opdracht 1</a>
+             </li>
+             <li>
+                 <a href="Labo 3/Opdracht 2.html">opdracht 2</a>
+             </li>
+             <li>
+                 <a href="Labo 3/Opdracht 3.html">opdracht 3</a>
              </li>
          </ol>
      </li>
