--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
          <h2>Labo 3</h2>
          <ol>
              <li>
-                 <a href="Labo 3/Opdracht 1.html">opdracht 1</a>
+                 <a href="Labo 3/subpaginas/Opdracht 1.html">opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo 3/Opdracht 2.html">opdracht 2</a>
+                 <a href="Labo 3/subpaginas/Opdracht 2.html">opdracht 2</a>
              </li>
              <li>
-                 <a href="Labo 3/Opdracht 3.html">opdracht 3</a>
+                 <a href="Labo 3/subpaginas/Opdracht 3.html">opdracht 3</a>
              </li>
          </ol>
      </li>
