--- a/Labo 3/homepage/index.html
+++ b/Labo 3/homepage/index.html
@@ -5,6 +5,12 @@
     <title>Web Development I</title>
 </head>
 <body>
-
+    <h1>Tim</h1>
+    <section>
+        <header>
+            <h1>Tim Geuens</h1>
+        </header>
+        
+    </section>
 </body>
 </html>
