--- a/Labo 3/subpaginas/Opdracht 1.html
+++ b/Labo 3/subpaginas/Opdracht 1.html
@@ -6,8 +6,43 @@
 </head>
 <body>
     <h1>Opdracht 1</h1>
+    <h2>Document</h2>
     <p>
-
+        Document is het overkoepelende object waar alles onder valt.
+    </p> <br>
+    <h2>HTML</h2>
+    <p>
+        HTML is de bron van alle andere elementen.
+    </p> <br>
+    <h2>Head</h2>
+    <p>
+        Head is informatie die niet te zien is door de bezoeker maar wel door de browser wordt gebruikt.
+    </p> <br>
+    <h3>Meta</h3>
+    <p>
+        Meta is een element dat deel uitmaakt van de Head. <br>
+        Hier staat er informatie over data die wordt gebruikt om bepaalde dingen te specifieren over de pagina zoals character set en page description.
+    </p><br>
+    <h3>Title</h3>
+    <p>
+        Title is alleen tekst en wordt enkel getoont in de browser als naam voor het tablad.
+    </p> <br>
+    <h2>Body</h2>
+    <p>
+        Body is het element waar alle andere elementen worden in geplaatst die zichtbaar moeten zijn voor de bezoeker zoals paragraaf, afbeeldingen,... .
+    </p>
+    <h3>H1/H2/H3/H4/H5/H6/P</h3>
+    <p>
+        H1 tot en met H6 zijn hoofdingen en hebben een bepaalde structuur van meest naar minst belangrijk. <br>
+        P is een element waar gewone tekst in getoont kan worden.
+    </p>
+    <h4>A</h4>
+    <p>
+        A is het element om hyperlinks te creëren binnen het P element.
+    </p> <br>
+    <h4>IMG</h4>
+    <p>
+        image is het element om afbeeldingen te tonen op de webpagina, dit element zit ook binnen het P element.
     </p>
 </body>
 </html>
