--- a/Labo 3/subpaginas/Opdracht 3.html
+++ b/Labo 3/subpaginas/Opdracht 3.html
@@ -7,7 +7,10 @@
 <body>
     <h1>Opdracht 3</h1>
         <p>
-
+            Elke accordion section bestaat uit een titel en een div-tag waar de tekst in staat die ook verborgen kan worden.<br>
+            In het script zie ik een functie waarvan ik denk dat deze de wijziging uitvoert, deze noemt accordion. <br>
+            Wat me opviel binnen de h3 class was dat de parameters aria-selected en aria-expanded veranderde. <br>
+            Ook binnen de div class veranderde er parameters zoals aria-hidden. <br>
         </p>
 </body>
 </html>
