--- a/Labo 3/homepage/index.html
+++ b/Labo 3/homepage/index.html
@@ -60,7 +60,11 @@
                 zelf heb ik al een heel aantal sets gemaakt, de laatste set die ik gemaakt heb is de Mclaren P1. <br> <br>
                 <img src="images/Lego_mclaren.png" alt="Lego Mclaren" width="600">
             </p>
-            <p>Hieronder een aantal linken.</p>
+        </article>
+        <article>
+            <header>
+                <h2>Hieronder een aantal linken.</h2>
+            </header>
             <aside>
                 <ul>
                     <li> <a href="https://www.formula1.com/" target="_blank">Formule 1</a></li>
@@ -70,6 +74,31 @@
                     <li> <a href="https://www.rockstargames.com/gta-v" target="_blank">GTA 5</a></li>
                 </ul>
             </aside>
+        </article>
+    </section>
+    <section>
+        <header>
+            <h1>Likes</h1>
+        </header>
+        <article>
+            <header>
+                <h2>Marvel Films</h2>
+            </header>
+            <p>
+                Ik ben fan van de Marvel films die allemaal te vinden zijn op Disney+. <br> <br>
+                <img src="images/Marvel.jpeg" alt="Marvel" width="600">
+            </p>
+        </article>
+        <article>
+            <header>
+                <h2>Coldplay</h2>
+            </header>
+            <p>
+                Ik heb de muziek van Coldplay altijd mooi gevonden. <br> <br>
+                <a href="https://www.coldplay.com/" target="_blank">
+                    <img src="images/Coldplay.jpg" alt="Coldplay" width="600">
+                </a>
+            </p>
         </article>
     </section>
 </body>
