--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
              <li>
                  <a href="Labo 3/subpaginas/Opdracht 3.html">opdracht 3</a>
              </li>
+             <li>
+                 <a href="Labo 3/homepage/index.html">Personal Homepage</a>
+             </li>
+             <li>
+                 <a href="Labo 3/ContactInformation/ContactInformationAssignment.html">Contact Information</a>
+             </li>
          </ol>
      </li>
  </ul>
