--- a/Labo 3/homepage/index.html
+++ b/Labo 3/homepage/index.html
@@ -101,5 +101,54 @@
             </p>
         </article>
     </section>
+    <h2>Prognose</h2>
+    <table border="1" width="30%">
+        <thead>
+        <tr>
+            <th>Naam</th>
+            <th>Vak</th>
+            <th>Score</th>
+        </tr>
+        <tr>
+            <td rowspan="3">Tim Geuens</td>
+            <td>Web Development</td>
+            <td>13/20</td>
+        </tr>
+        <tr>
+            <td>Fundamentals of Programing I</td>
+            <td>14/20</td>
+        </tr>
+        <tr>
+            <td>Databases</td>
+            <td>11/20</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Jens</td>
+            <td>Web Development</td>
+            <td>14/20</td>
+        </tr>
+        <tr>
+            <td>Fundamentals of Programing I</td>
+            <td>15/20</td>
+        </tr>
+        <tr>
+            <td>Databases</td>
+            <td>11/20</td>
+        <tr>
+            <td rowspan="3">Romeo</td>
+            <td>Web Development</td>
+            <td>10/20</td>
+        </tr>
+        <tr>
+            <td>Fundamentals of Programing I</td>
+            <td>12/20</td>
+        </tr>
+        <tr>
+            <td>Databases</td>
+            <td>9/20</td>
+        </thead>
+    </table>
+    <br>
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
