--- a/Labo 3/subpaginas/Opdracht 1.html
+++ b/Labo 3/subpaginas/Opdracht 1.html
@@ -44,5 +44,6 @@
     <p>
         image is het element om afbeeldingen te tonen op de webpagina, dit element zit ook binnen het P element.
     </p>
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
