--- a/Labo 3/subpaginas/Opdracht 2.html
+++ b/Labo 3/subpaginas/Opdracht 2.html
@@ -9,5 +9,6 @@
         <p>
             Ik heb dit uitgevoerd en dit werkte zoals verwacht.
         </p>
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
