--- a/Labo 3/subpaginas/Opdracht 3.html
+++ b/Labo 3/subpaginas/Opdracht 3.html
@@ -12,5 +12,6 @@
             Wat me opviel binnen de h3 class was dat de parameters aria-selected en aria-expanded veranderde. <br>
             Ook binnen de div class veranderde er parameters zoals aria-hidden. <br>
         </p>
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
