--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
              <li>
                  <a href="Labo 3/ContactInformation/ContactInformationAssignment.html">Contact Information</a>
              </li>
+             <li>
+                 <a href="Labo 3/Opleidingsaanbod/OpleidingsaanbodVIVES.html">Opleidingsaanbod VIVES</a>
+             </li>
          </ol>
      </li>
  </ul>
