--- a/Labo 3/homepage/index.html
+++ b/Labo 3/homepage/index.html
@@ -134,6 +134,7 @@
         <tr>
             <td>Databases</td>
             <td>11/20</td>
+        </tr>
         <tr>
             <td rowspan="3">Romeo</td>
             <td>Web Development</td>
@@ -146,6 +147,20 @@
         <tr>
             <td>Databases</td>
             <td>9/20</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Reinout</td>
+            <td>Web Development</td>
+            <td>13/20</td>
+        </tr>
+        <tr>
+            <td>Fundamentals of Programing I</td>
+            <td>15/20</td>
+        </tr>
+        <tr>
+            <td>Databases</td>
+            <td>16/20</td>
+        </tr>
         </thead>
     </table>
     <br>
