--- a/Labo 3/homepage/index.html
+++ b/Labo 3/homepage/index.html
@@ -15,7 +15,7 @@
                 <li>Fullname: Tim Geuens</li>
                 <li>Adress: Doorniksesteenweg 145, Kortrijk</li>
                 <li>Phone number: 0499 876 543</li>
-                <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li> <br>
+                <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li>
                 <img src="images/Portret%20klein.jpg" alt="potret" width="200">
             </ul>
         </aside>
