--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 4</h2>
+         <ol>
+             <li>
+                 <a href="Labo%204/subpaginas/Opdracht 1.html">opdracht 1</a>
+             </li>
+             <li>
+                 <a href="Labo%204/subpaginas/Opdracht 2.html">opdracht 2</a>
+             </li>
+             <li>
+                 <a href="Labo%204/subpaginas/Opdracht 3.html">opdracht 3</a>
+             </li>
+             <li>
+                 <a href="Labo%204/subpaginas/Opdracht%205/index.html">Personal Homepage</a>
+             </li>
+         <ol/>
+     </li>
  </ul>
 </body>
 </html>
