--- a/Labo 4/subpaginas/Opdracht 3.html
+++ b/Labo 4/subpaginas/Opdracht 3.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 <h1>Opdracht 3</h1>
-
-
-
-
-
+    <p>
+        Alles is nagekeken en verbetert als het nodig was.
+    </p>
 <a href="../../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
