--- a/Labo 4/subpaginas/Opdracht 2.html
+++ b/Labo 4/subpaginas/Opdracht 2.html
@@ -6,12 +6,18 @@
 </head>
 <body>
   <h1>Opdracht 2</h1>
+    <p>
+      Bij de standaard kwaliteit is het 542 KB groot. <br> <br>
+      <img src="../Images/img%20opdracht%202.jpg" alt="Boom 1" width="500">
+      <br>
+      Bij een kwaliteit van 70 is het 201 KB groot. <br> <br>
+      <img src="../Images/boom%20quality%2070.png" alt="Boom 2" width="500">
+      <br>
+      Bij een kwaliteit van 40 is het 116 KB groot. <br> <br>
+      <img src="../Images/boom%20quality%2040.png" alt="Boom 3" width="500">
+      <br>
 
-
-
-
-
-
+    </p>
   <a href="../../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
