--- a/Labo 4/subpaginas/Opdracht 2.html
+++ b/Labo 4/subpaginas/Opdracht 2.html
@@ -18,6 +18,6 @@
       <br>
 
     </p>
-  <a href="../../../index.html">Terug naar hoofdpagina</a>
+  <a href="../../../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
