--- a/Labo 3/Opleidingsaanbod/OpleidingsaanbodVIVES.html
+++ b/Labo 3/Opleidingsaanbod/OpleidingsaanbodVIVES.html
@@ -19,19 +19,26 @@
         bachelor diploma’s behalen:</p>
         <ul>
             <li>Toegepaste informatica</li>
+            <li style="list-style-type: none">
             <ol type="1">
                 <li>Applicatie-ontwikkeling</li>
+                <li style="list-style-type: none">
                 <ul>
                     <li>Apps & gamification</li>
                     <li>Networks & cybersecurity</li>
                     <li>AI</li>
                 </ul>
+                </li>
                 <li>Softwaremanagement</li>
+                <li style="list-style-type: none">
                 <ul>
                     <li>Business & IT</li>
                 </ul>
+                </li>
             </ol>
+            </li>
             <li>Bedrijfsmanagement</li>
+            <li style="list-style-type: none">
             <ol type="1">
                 <li>Accountancy-Fiscaliteit</li>
                 <li>Automotive management</li>
@@ -40,12 +47,15 @@
                 <li>Financie- en verzekeringswezen</li>
                 <li>Marketing - specialisatie Retail- & storemanagement</li>
             </ol>
+            </li>
             <li>Office management</li>
+            <li style="list-style-type: none">
             <ol type="1">
                 <li>Management assistant</li>
                 <li>HR officer</li>
                 <li>Medical office manager</li>
             </ol>
+            </li>
         </ul>
     <p>Definitie van Ohm</p>
         <ul style="list-style-type:none">
