--- a/Labo 4/subpaginas/Opdracht 1.html
+++ b/Labo 4/subpaginas/Opdracht 1.html
@@ -24,6 +24,6 @@
     Alle gegevens van de vorige bestandsgroottes worden verwijderd en ben je dus permanent kwijt.
   </p>
 <br>
-  <a href="../../../../index.html">Terug naar hoofdpagina</a>
+  <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
