--- a/Labo 4/subpaginas/Opdracht 2.html
+++ b/Labo 4/subpaginas/Opdracht 2.html
@@ -16,8 +16,8 @@
       Bij een kwaliteit van 40 is het 116 KB groot. <br> <br>
       <img src="../Images/boom%20quality%2040.png" alt="Boom 3" width="500">
       <br>
-
+      Als ik de kwaliteit verlaag dan verandert er niet erg veel tenzij ik de kwaliteit op het laagste zet.
     </p>
-  <a href="../../../../index.html">Terug naar hoofdpagina</a>
+  <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
