--- a/Labo 4/subpaginas/Opdracht 3.html
+++ b/Labo 4/subpaginas/Opdracht 3.html
@@ -9,6 +9,6 @@
     <p>
         Alles is nagekeken en verbetert als het nodig was.
     </p>
-<a href="../../../../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
