--- a/Labo 4/subpaginas/Opdracht 5/index.html
+++ b/Labo 4/subpaginas/Opdracht 5/index.html
@@ -25,6 +25,6 @@
     <a href="likes.html">Likes</a> <br>
     <a href="Prognose.html">Prognose</a> <br>
     <br>
-    <a href="../../../../index.html">Terug naar hoofdpagina</a>
+    <a href="../../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
