--- a/Labo 5/Opdracht 6/index.html
+++ b/Labo 5/Opdracht 6/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="Styles/Stijl.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<h1>Paragraaf 1</h1>
+    <p class="p1">
+        hier staat een tekst die niet belangrijk is voor de opdracht.
+    </p>
+<h2>Paragraaf 2</h2>
+    <p class="p2">
+        Ook hier moest een tekst staan die niet belangrijk is.
+    </p>
+<h3>Paragraaf 3</h3>
+    <p class="p3">
+        Deze tekst is opnieuw niet van belang voor de opdracht.
+    </p>
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
