--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
              <li>
                  <a href="Labo%204/subpaginas/Opdracht%205/index.html">Personal Homepage</a>
              </li>
-         <ol/>
+         </ol>
+     </li>
+     <li>
+         <h2>Labo 5</h2>
+         <ol>
+             <li>
+                 <a href="Labo 5/Subpaginas/Opdracht%201.html">opdracht 1</a>
+             </li>
+             <li>
+                 <a href="Labo 5/Subpaginas/Opdracht 3.html">opdracht 3</a>
+             </li>
+             <li>
+                 <a href="Labo%205/Subpaginas/Opdracht 4.html">opdracht 4</a>
+             </li>
+             <li>
+                 <a href="Labo%205/Opdracht%206/index.html">Opdracht 6</a>
+             </li>
+             <li>
+                 <a href="Labo%205/Subpaginas/Opdracht%207.html">Opdracht 7</a>
+             </li>
+         </ol>
      </li>
  </ul>
 </body>
