--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 6</h2>
+         <ol>
+             <li>
+                 <a href="Labo%206/SubPaginas/Opdracht%201.html">Opdracht 1</a>
+             </li>
+             <li>
+                 <a href="Labo 6/SubPaginas/Opdracht%203.html">Opdracht 3</a>
+             </li>
+             <li>
+                 <a href="Labo%206/SubPaginas/Opdracht 4.html">Opdracht 4</a>
+             </li>
+             <li>
+                 <a href="Labo%206/SubPaginas/Opdracht%205.html">Opdracht 5</a>
+             </li>
+             <li>
+                 <a href="Labo%206/SubPaginas/Opdracht%206.html">Opdracht 6</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
