--- a/Labo 6/SubPaginas/Opdracht 4.html
+++ b/Labo 6/SubPaginas/Opdracht 4.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20Opdracht%204.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <h1>Een voorbeeld HTML-pagina</h1>
+<p class="stippeltjesrand">
+    Dit is een voorbeeld van een paragraaf.
+</p>
+<p>
+    Met HTML kun je verschillende elementen toevoegen.
+</p>
+<ul>
+    <li class="stippeltjesrand">HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+</ul>
+<p>
+    Voor meer informatie over HTML, bezoek de <a href="https://www.w3schools.com/html/">W3Schools HTML Tutorial</a>.
+</p>
 </body>
 </html>
