--- a/Labo 6/SubPaginas/Opdracht 4.html
+++ b/Labo 6/SubPaginas/Opdracht 4.html
@@ -21,5 +21,7 @@
 <p>
     Voor meer informatie over HTML, bezoek de <a href="https://www.w3schools.com/html/">W3Schools HTML Tutorial</a>.
 </p>
+
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
