--- a/Labo 6/SubPaginas/Opdracht 5.html
+++ b/Labo 6/SubPaginas/Opdracht 5.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20Opdracht%205.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<h1>Opdracht 5</h1>
+    <p>
+        In deze regel staat een <a href="https://www.google.be/?hl=nl">een hyperlink met een icoon ervoor.</a>
+    </p>
 </body>
 </html>
