--- a/Labo 6/SubPaginas/Opdracht 5.html
+++ b/Labo 6/SubPaginas/Opdracht 5.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Opdracht 5</h1>
     <p>
-        In deze regel staat een <a href="https://www.google.be/?hl=nl">een hyperlink met een icoon ervoor.</a>
+        In deze regel staat een <a href="https://www.google.be/?hl=nl">een hyperlink</a> met een icoon ervoor.
     </p>
 </body>
 </html>
