--- a/Labo 6/SubPaginas/Opdracht 5.html
+++ b/Labo 6/SubPaginas/Opdracht 5.html
@@ -10,5 +10,7 @@
     <p>
         In deze regel staat een <a href="https://www.google.be/?hl=nl">een hyperlink</a> met een icoon ervoor.
     </p>
+
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
