--- a/Labo 6/SubPaginas/Opdracht 6.html
+++ b/Labo 6/SubPaginas/Opdracht 6.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20Opdracht%206.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <h1>Opdracht 6</h1>
+    <ul class="checklist">
+        <li class="checked">boter</li>
+        <li>kaas</li>
+        <li class="checked">eieren</li>
+    </ul>
 </body>
 </html>
