--- a/Labo 7/Subpaginas/Opdracht homepage.html
+++ b/Labo 7/Subpaginas/Opdracht homepage.html
@@ -12,7 +12,7 @@
             <h1>Personal information</h1>
         </header>
         <aside>
-            <ul>
+            <ul class="lijst">
                 <li>Fullname: Tim Geuens</li>
                 <li>Adress: Doorniksesteenweg 145, Kortrijk</li>
                 <li>Phone number: 0499 876 543</li>
