--- a/index.html
+++ b/index.html
@@ -125,6 +125,26 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 7</h2>
+         <ol>
+             <li>
+                 <a href="Labo%207/Subpaginas/Opdracht%20nature%20blog.html">Opdracht nature blog</a>
+             </li>
+             <li>
+                 <a href="Labo 7/Subpaginas/Opdracht%20homepage.html">Opdracht homepage</a>
+             </li>
+             <li>
+                 <a href="Labo%207/Subpaginas/Opdracht 2.html">Opdracht 2</a>
+             </li>
+             <li>
+                 <a href="Labo%207/Subpaginas/Opdracht 3.html">Opdracht 3</a>
+             </li>
+             <li>
+                 <a href="Labo%207/Subpaginas/Opdracht%20Kalender.html">Opdracht Kalender</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
