--- a/Labo 7/Subpaginas/Opdracht 2.html
+++ b/Labo 7/Subpaginas/Opdracht 2.html
@@ -3,8 +3,225 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20opdracht%202.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<h1>Tim</h1>
+<section>
+    <header>
+        <h1>Personal information</h1>
+    </header>
+    <aside>
+        <ul class="lijst">
+            <li>Fullname: Tim Geuens</li>
+            <li>Adress: Doorniksesteenweg 145, Kortrijk</li>
+            <li>Phone number: 0499 876 543</li>
+            <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li>
+        </ul>
+        <img src="../Images/Portret%20klein.jpg" alt="potret" width="200">
+    </aside>
+</section>
+<section>
+    <header>
+        <h1>Hobbies</h1>
+    </header>
+    <article>
+        <header>
+            <h2>Formule 1</h2>
+        </header>
+        <p>
+            Formule 1 is de hoogste klasse in de autosport, gereguleerd door de Fédération Internationale de l’Automobile (FIA).<br>
+            Het seizoen bestaat uit een reeks races, bekend als Grands Prix, die wereldwijd op speciaal aangelegde circuits en openbare wegen worden gehouden. <br>
+            F1-auto’s zijn de snelste raceauto’s ter wereld, met geavanceerde technologie en aerodynamica. Teams zoals Mclaren, Ferrari en Red Bull strijden om de kampioenschappen voor coureurs en constructeurs.<br>
+            Bekende coureurs zijn onder andere Lewis Hamilton, Max Verstappen en Charles Leclerc. <br>
+            De sport combineert snelheid, strategie en technische innovatie, wat het tot een van de meest opwindende en populaire motorsporten ter wereld maakt.
+        </p>
+    </article>
+    <article>
+        <header>
+            <h2>Gamen</h2>
+        </header>
+        <p>
+            Gamen is een populaire hobby waarbij je videogames speelt op verschillende platforms zoals pc, consoles (zoals PlayStation en Xbox), en mobiele apparaten. <br>
+            Het biedt een breed scala aan genres, van actie en avontuur tot strategie en simulatie. <br>
+            Gamen kan zowel solo als met anderen worden gedaan, waarbij online multiplayer-games je in staat stellen om met vrienden of mensen van over de hele wereld te spelen. <br>
+            Het is een geweldige manier om te ontspannen, je vaardigheden te verbeteren en deel uit te maken van een community. <br>
+            Games die ik vaak speel zijn Formule 1, Fortnite en GTA 5 Online. Dit doe ik voornamelijk op de ps5.
+        </p>
+    </article>
+    <article>
+        <header>
+            <h2>Lego</h2>
+        </header>
+        <p>
+            LEGO Technic is een speciale lijn van LEGO die zich richt op het bouwen van complexe en realistische modellen met geavanceerde functies. <br>
+            Deze sets bevatten onderdelen zoals tandwielen, assen, motoren en pneumatische systemen, waardoor je voertuigen en machines kunt bouwen die echt kunnen bewegen en functioneren. <br>
+            Het is een geweldige hobby voor mensen die van techniek en bouwen houden, omdat het niet alleen leuk is, maar ook educatief. <br>
+            Je kunt alles maken, van auto’s en vrachtwagens tot kranen en vliegtuigen. <br>
+            zelf heb ik al een heel aantal sets gemaakt, de laatste set die ik gemaakt heb is de Mclaren P1. <br> <br>
+            <img src="../Images/Lego_mclaren.png" alt="Lego Mclaren" width="600">
+        </p>
+    </article>
+    <article>
+        <header>
+            <h2>Hieronder een aantal linken.</h2>
+        </header>
+        <aside>
+            <ul>
+                <li> <a href="https://www.formula1.com/" target="_blank">Formule 1</a></li>
+                <li> <a href="https://www.mclaren.com/racing/" target="_blank">Mclaren F1</a></li>
+                <li> <a href="https://www.lego.com/nl-be/themes/technic" target="_blank">Lego Technic</a></li>
+                <li> <a href="https://www.fortnite.com/?lang=en-US" target="_blank">Fortnite</a></li>
+                <li> <a href="https://www.rockstargames.com/gta-v" target="_blank">GTA 5</a></li>
+            </ul>
+        </aside>
+    </article>
+</section>
+<section>
+    <header>
+        <h1>Likes</h1>
+    </header>
+    <article>
+        <header>
+            <h2>Marvel Films</h2>
+        </header>
+        <p>
+            Ik ben fan van de Marvel films die allemaal te vinden zijn op Disney+. <br> <br>
+            <img src="../Images/Marvel.jpeg" alt="Marvel" width="600">
+        </p>
+    </article>
+    <article>
+        <header>
+            <h2>Coldplay</h2>
+        </header>
+        <p>
+            Ik heb de muziek van Coldplay altijd mooi gevonden. <br> <br>
+            <a href="https://www.coldplay.com/" target="_blank">
+                <img src="../Images/Coldplay.jpg" alt="Coldplay" width="600">
+            </a>
+        </p>
+    </article>
+</section>
+<h2>Prognose</h2>
+<table border="1" width="30%">
+    <thead>
+    <tr>
+        <th>Naam</th>
+        <th>Vak</th>
+        <th>Score</th>
+    </tr>
+    <tr>
+        <td rowspan="3">Tim Geuens</td>
+        <td>Web Development</td>
+        <td>13/20</td>
+    </tr>
+    <tr>
+        <td>Fundamentals of Programing I</td>
+        <td>14/20</td>
+    </tr>
+    <tr>
+        <td>Databases</td>
+        <td>11/20</td>
+    </tr>
+    <tr>
+        <td rowspan="3">Jens</td>
+        <td>Web Development</td>
+        <td>14/20</td>
+    </tr>
+    <tr>
+        <td>Fundamentals of Programing I</td>
+        <td>15/20</td>
+    </tr>
+    <tr>
+        <td>Databases</td>
+        <td>11/20</td>
+    </tr>
+    <tr>
+        <td rowspan="3">Romeo</td>
+        <td>Web Development</td>
+        <td>10/20</td>
+    </tr>
+    <tr>
+        <td>Fundamentals of Programing I</td>
+        <td>12/20</td>
+    </tr>
+    <tr>
+        <td>Databases</td>
+        <td>9/20</td>
+    </tr>
+    <tr>
+        <td rowspan="3">Reinout</td>
+        <td>Web Development</td>
+        <td>13/20</td>
+    </tr>
+    <tr>
+        <td>Fundamentals of Programing I</td>
+        <td>15/20</td>
+    </tr>
+    <tr>
+        <td>Databases</td>
+        <td>16/20</td>
+    </tr>
+    </thead>
+</table>
+<br>
+<h1>Vrienden</h1>
+<div class="datagrid">
+    <table>
+        <thead>
+        <tr>
+            <th>Voornaam</th>
+            <th>Familienaam</th>
+            <th>Straat</th>
+            <th>Postcode</th>
+            <th>Stad/Gemeente</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Jef</td>
+            <td>Jansens</td>
+            <td>Bakkerijstraat</td>
+            <td>9000</td>
+            <td>Gent</td>
+        </tr>
+        <tr>
+            <td>Bert</td>
+            <td>De Backer</td>
+            <td>Stationstraat</td>
+            <td>2000</td>
+            <td>Antwerpen</td>
+        </tr>
+        <tr>
+            <td>George</td>
+            <td>Russel</td>
+            <td>Kortrijksesteenweg</td>
+            <td>8710</td>
+            <td>Waregem</td>
+        </tr>
+        <tr>
+            <td>Lando</td>
+            <td>Norris</td>
+            <td>Nachtegaalstraat</td>
+            <td>9870</td>
+            <td>Zulte</td>
+        </tr>
+        <tr>
+            <td>Max</td>
+            <td>Verstappen</td>
+            <td>Stationstraat</td>
+            <td>8500</td>
+            <td>Kortrijk</td>
+        </tr>
+        <tr>
+            <td>Lewis</td>
+            <td>Hamilton</td>
+            <td>Waalstraat</td>
+            <td>8000</td>
+            <td>Brugge</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
