--- a/Labo 7/Subpaginas/Opdracht 2.html
+++ b/Labo 7/Subpaginas/Opdracht 2.html
@@ -223,5 +223,10 @@
         </tbody>
     </table>
 </div>
+<p>
+    Alle properties zijn nodig en ook de browser prefix is nodig.
+</p>
+<br>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
