--- a/Labo 7/Subpaginas/Opdracht 3.html
+++ b/Labo 7/Subpaginas/Opdracht 3.html
@@ -3,8 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20opdracht%203.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<h1>Vrienden</h1>
+<div class="datagrid">
+    <table>
+        <thead>
+        <tr>
+            <th>Voornaam</th>
+            <th>Familienaam</th>
+            <th>Straat</th>
+            <th>Postcode</th>
+            <th>Stad/Gemeente</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Jef</td>
+            <td>Jansens</td>
+            <td>Bakkerijstraat</td>
+            <td>9000</td>
+            <td>Gent</td>
+        </tr>
+        <tr>
+            <td>Bert</td>
+            <td>De Backer</td>
+            <td>Stationstraat</td>
+            <td>2000</td>
+            <td class="onbekend"></td>
+        </tr>
+        <tr>
+            <td>George</td>
+            <td>Russel</td>
+            <td class="onbekend"></td>
+            <td>8710</td>
+            <td>Waregem</td>
+        </tr>
+        <tr>
+            <td>Lando</td>
+            <td>Norris</td>
+            <td>Nachtegaalstraat</td>
+            <td>9870</td>
+            <td>Zulte</td>
+        </tr>
+        <tr>
+            <td>Max</td>
+            <td>Verstappen</td>
+            <td>Stationstraat</td>
+            <td class="onbekend"></td>
+            <td>Kortrijk</td>
+        </tr>
+        <tr>
+            <td>Lewis</td>
+            <td>Hamilton</td>
+            <td class="onbekend"></td>
+            <td>8000</td>
+            <td>Brugge</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
