--- a/Labo 7/Subpaginas/Opdracht Kalender.html
+++ b/Labo 7/Subpaginas/Opdracht Kalender.html
@@ -3,8 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development I</title>
+    <link href="../Styles/Stijl%20opdracht%20Kalender.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <table>
+        <thead>
+        <tr>
+            <th colspan="7">June 2020</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td class="daghoofding">Sun</td>
+            <td class="daghoofding">Mon</td>
+            <td class="daghoofding">Tue</td>
+            <td class="daghoofding">Wed</td>
+            <td class="daghoofding">Thu</td>
+            <td class="daghoofding">Fri</td>
+            <td class="daghoofding">Sat</td>
+        </tr>
+        <tr>
+            <td class="anderemaand">30</td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+            <td>11</td>
+            <td>12</td>
+            <td>13</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>15</td>
+            <td class="vrijedag">16</td>
+            <td>17</td>
+            <td>18</td>
+            <td>19</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td>22</td>
+            <td>23</td>
+            <td>24</td>
+            <td>25</td>
+            <td>26</td>
+            <td>27</td>
+        </tr>
+        <tr>
+            <td>28</td>
+            <td>29</td>
+            <td>30</td>
+            <td class="anderemaand">1</td>
+            <td class="anderemaand">2</td>
+            <td class="anderemaand">3</td>
+            <td class="anderemaand">4</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
