--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
          <h2>Labo 2</h2>
          <ol>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 3.html">opdracht 3</a>
+                 <a href="Labo%202/subpaginas/opdracht%203.html">opdracht 3</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 4.html">opdracht 4</a>
+                 <a href="Labo%202/subpaginas/opdracht%204.html">opdracht 4</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 5.html">opdracht 5</a>
+                 <a href="Labo%202/subpaginas/opdracht%205.html">opdracht 5</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 6.html">opdracht 6</a>
+                 <a href="Labo%202/subpaginas/opdracht%206.html">opdracht 6</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 7.html">opdracht 7</a>
+                 <a href="Labo%202/subpaginas/opdracht%207.html">opdracht 7</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 8.html">opdracht 8</a>
+                 <a href="Labo%202/subpaginas/opdracht%208.html">opdracht 8</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 9.html">opdracht 9</a>
+                 <a href="Labo%202/subpaginas/opdracht%209.html">opdracht 9</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 10.html">opdracht 10</a>
+                 <a href="Labo%202/subpaginas/opdracht%2010.html">opdracht 10</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 11.html">opdracht 11</a>
+                 <a href="Labo%202/subpaginas/opdracht%2011.html">opdracht 11</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 12.html">opdracht 12</a>
+                 <a href="Labo%202/subpaginas/opdracht%2012.html">opdracht 12</a>
              </li>
              <li>
-                 <a href="Labo 2/subpaginas/opdracht 13.html">opdracht 13</a>
+                 <a href="Labo%202/subpaginas/opdracht%2013.html">opdracht 13</a>
              </li>
          </ol>
      </li>
@@ -49,22 +49,22 @@
          <h2>Labo 3</h2>
          <ol>
              <li>
-                 <a href="Labo 3/subpaginas/Opdracht 1.html">opdracht 1</a>
+                 <a href="Labo%203/subpaginas/Opdracht%201.html">opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo 3/subpaginas/Opdracht 2.html">opdracht 2</a>
+                 <a href="Labo%203/subpaginas/Opdracht%202.html">opdracht 2</a>
              </li>
              <li>
-                 <a href="Labo 3/subpaginas/Opdracht 3.html">opdracht 3</a>
+                 <a href="Labo%203/subpaginas/Opdracht%203.html">opdracht 3</a>
              </li>
              <li>
-                 <a href="Labo 3/homepage/index.html">Personal Homepage</a>
+                 <a href="Labo%203/homepage/index.html">Personal Homepage</a>
              </li>
              <li>
-                 <a href="Labo 3/ContactInformation/ContactInformationAssignment.html">Contact Information</a>
+                 <a href="Labo%203/ContactInformation/ContactInformationAssignment.html">Contact Information</a>
              </li>
              <li>
-                 <a href="Labo 3/Opleidingsaanbod/OpleidingsaanbodVIVES.html">Opleidingsaanbod VIVES</a>
+                 <a href="Labo%203/Opleidingsaanbod/OpleidingsaanbodVIVES.html">Opleidingsaanbod VIVES</a>
              </li>
          </ol>
      </li>
@@ -72,13 +72,13 @@
          <h2>Labo 4</h2>
          <ol>
              <li>
-                 <a href="Labo%204/subpaginas/Opdracht 1.html">opdracht 1</a>
+                 <a href="Labo%204/subpaginas/Opdracht%201.html">opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo%204/subpaginas/Opdracht 2.html">opdracht 2</a>
+                 <a href="Labo%204/subpaginas/Opdracht%202.html">opdracht 2</a>
              </li>
              <li>
-                 <a href="Labo%204/subpaginas/Opdracht 3.html">opdracht 3</a>
+                 <a href="Labo%204/subpaginas/Opdracht%203.html">opdracht 3</a>
              </li>
              <li>
                  <a href="Labo%204/subpaginas/Opdracht%205/index.html">Personal Homepage</a>
@@ -89,13 +89,13 @@
          <h2>Labo 5</h2>
          <ol>
              <li>
-                 <a href="Labo 5/Subpaginas/Opdracht%201.html">opdracht 1</a>
+                 <a href="Labo%205/Subpaginas/Opdracht%201.html">opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo 5/Subpaginas/Opdracht 3.html">opdracht 3</a>
+                 <a href="Labo%205/Subpaginas/Opdracht%203.html">opdracht 3</a>
              </li>
              <li>
-                 <a href="Labo%205/Subpaginas/Opdracht 4.html">opdracht 4</a>
+                 <a href="Labo%205/Subpaginas/Opdracht%204.html">opdracht 4</a>
              </li>
              <li>
                  <a href="Labo%205/Opdracht%206/index.html">Opdracht 6</a>
@@ -112,10 +112,10 @@
                  <a href="Labo%206/SubPaginas/Opdracht%201.html">Opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo 6/SubPaginas/Opdracht%203.html">Opdracht 3</a>
+                 <a href="Labo%206/SubPaginas/Opdracht%203.html">Opdracht 3</a>
              </li>
              <li>
-                 <a href="Labo%206/SubPaginas/Opdracht 4.html">Opdracht 4</a>
+                 <a href="Labo%206/SubPaginas/Opdracht%204.html">Opdracht 4</a>
              </li>
              <li>
                  <a href="Labo%206/SubPaginas/Opdracht%205.html">Opdracht 5</a>
@@ -132,13 +132,13 @@
                  <a href="Labo%207/Subpaginas/Opdracht%20nature%20blog.html">Opdracht nature blog</a>
              </li>
              <li>
-                 <a href="Labo 7/Subpaginas/Opdracht%20homepage.html">Opdracht homepage</a>
+                 <a href="Labo%207/Subpaginas/Opdracht%20homepage.html">Opdracht homepage</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht 2.html">Opdracht 2</a>
+                 <a href="Labo%207/Subpaginas/Opdracht%202.html">Opdracht 2</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht 3.html">Opdracht 3</a>
+                 <a href="Labo%207/Subpaginas/Opdracht%203.html">Opdracht 3</a>
              </li>
              <li>
                  <a href="Labo%207/Subpaginas/Opdracht%20Kalender.html">Opdracht Kalender</a>
