--- a/Labo 8/Voorbeelden/voorbeeld1.html
+++ b/Labo 8/Voorbeelden/voorbeeld1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../../Styles/styles%20opdracht%201.css">
+	<link rel="stylesheet" type="text/css" href="../Styles/styles Voorbeelden.css">
 </head>
 <body>
 	<div class="area">01</div>
