--- a/Labo 8/subpaginas/Opdracht 1.html
+++ b/Labo 8/subpaginas/Opdracht 1.html
@@ -8,10 +8,10 @@
 <h1>Opdracht 1</h1>
 
 <p>
-    De opgegeven width en height worden enkel door inline genegeerd.
+    De opgegeven width en height worden enkel door inline genegeerd. <br>
     Voor geen enkele waarde worden ze als woorden weergegeven.
 </p>
 
-<a href="../../../index.html">Terug naar hoofdpagina</a>
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
