--- a/Labo 8/subpaginas/Opdracht 3.html
+++ b/Labo 8/subpaginas/Opdracht 3.html
@@ -5,9 +5,10 @@
     <title>Web Development I</title>
 </head>
 <body>
-<h1>Opdracht 2</h1>
+<h1>Opdracht 3</h1>
 <p>
-    Ik heb dit uitgevoerd en het deed dit perfect.
+    De tekst in de blokken staat horizontaal gecentreerd omdat er in het css bestand staat <br>
+    dat alle tekst in een div centraal moet staan.
 </p>
 
 <a href="../../index.html">Terug naar hoofdpagina</a>
