--- a/Labo 8/Voorbeelden/voorbeeld2.html
+++ b/Labo 8/Voorbeelden/voorbeeld2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../../Styles/styles%20opdracht%201.css">
+	<link rel="stylesheet" type="text/css" href="../Styles/styles Voorbeelden.css">
 </head>
 <body>
 	<div class="area">01</div>
@@ -8,20 +8,17 @@
 	<div class="area">03</div>
 	<div class="area short">04</div>
 	<div class="area">05</div>
-een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien achttien negentien twintig
 	<div class="area tall">06</div>
 	<div class="area">07</div>
 	<div class="area short">08</div>
 	<div class="area">09</div>
 	<div class="area tall">10</div>
 	<div class="area">11</div>
-een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien achttien negentien twintig
 	<div class="area short">12</div>
 	<div class="area">13</div>
 	<div class="area tall">14</div>
 	<div class="area">15</div>
 	<div class="area short">16</div>
-een twee drie vier vijf zes zeven acht negen tien elf twaalf dertien veertien vijftien zestien zeventien achttien negentien twintig
 	<div class="area">17</div>
 	<div class="area tall">18</div>
 	<div class="area">19</div>
