--- a/Labo 8/Voorbeelden/voorbeeld4.html
+++ b/Labo 8/Voorbeelden/voorbeeld4.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../../Styles/styles%20opdracht%201.css">
+	<link rel="stylesheet" type="text/css" href="../Styles/styles%20Voorbeelden.css">
 </head>
 <body>
 	<div class="area floaty">01</div>
@@ -15,7 +15,7 @@
 	<div class="area floaty">10</div>
 	<div class="area floaty">11</div>
 	<div class="area floaty">12</div>
-	<div class="area floaty">13</div>
+	<div class="area floaty break">13</div>
 	<div class="area floaty">14</div>
 	<div class="area floaty">15</div>
 	<div class="area floaty">16</div>
