--- a/Labo 8/subpaginas/Opdracht 4.html
+++ b/Labo 8/subpaginas/Opdracht 4.html
@@ -5,9 +5,9 @@
     <title>Web Development I</title>
 </head>
 <body>
-<h1>Opdracht 2</h1>
+<h1>Opdracht 4</h1>
 <p>
-    Ik heb dit uitgevoerd en het deed dit perfect.
+    Alles aangepast en alles doet wat het moet doen.
 </p>
 
 <a href="../../index.html">Terug naar hoofdpagina</a>
