--- a/index.html
+++ b/index.html
@@ -126,22 +126,22 @@
          </ol>
      </li>
      <li>
-         <h2>Labo 7</h2>
+         <h2>Labo 8</h2>
          <ol>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht%20nature%20blog.html">Opdracht nature blog</a>
+                 <a href="Labo%208/subpaginas/Opdracht%201.html">Opdracht 1</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht%20homepage.html">Opdracht homepage</a>
+                 <a href="Labo%208/subpaginas/Opdracht%202.html">Opdracht 2</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht%202.html">Opdracht 2</a>
+                 <a href="Labo%208/subpaginas/Opdracht%203.html">Opdracht 3</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht%203.html">Opdracht 3</a>
+                 <a href="Labo%208/subpaginas/Opdracht%204.html">Opdracht 4</a>
              </li>
              <li>
-                 <a href="Labo%207/Subpaginas/Opdracht%20Kalender.html">Opdracht Kalender</a>
+                 <a href="Labo%208/subpaginas/Opdracht%205.html">Opdracht 5</a>
              </li>
          </ol>
      </li>
