--- a/Labo 8/subpaginas/Opdracht Lorem Ipsum.html
+++ b/Labo 8/subpaginas/Opdracht Lorem Ipsum.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Web Development I</title>
+    <link rel="stylesheet" type="text/css" href="../Styles/Stijl%20opdracht%20Lorem%20Ipsum.css">
 </head>
 <body>
-
+<div class="div1">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Maecenas vulputate ex mi, vitae mattis leo tempor vel.
+        Nullam felis lectus, eleifend id sem vel, viverra sollicitudin arcu.
+        Phasellus cursus dictum enim, ut ullamcorper leo luctus eget.
+        Morbi ut mauris at urna consectetur ornare quis ac dui.
+</div>
+<div class="div2">
+        Aliquam erat volutpat. Donec pretium augue et tortor fermentum consectetur.
+        Quisque fringilla urna ut tristique pharetra.
+        Curabitur vel porta tortor. Donec quis ante at sem bibendum dapibus.
+        Sed blandit blandit lobortis. Aenean a augue enim. Aliquam erat volutpat.
+        Donec ultrices odio eu est pretium, posuere tristique elit dapibus.
+</div>
 </body>
 </html>
