--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
              <li>
                  <a href="Labo%208/subpaginas/Opdracht%205.html">Opdracht 5</a>
              </li>
+             <li>
+                 <a href="Labo%208/subpaginas/Opdracht%20Lorem%20Ipsum.html">Opdracht Lorem Ipsum</a>
+             </li>
+             <li>
+                 <a href="Labo%208/subpaginas/Opdracht%20Lorem%20Ipsum%20met%20extra%20space.html">Opdracht Lorem Ipsum met extra space</a>
+             </li>
+             <li>
+                 <a href="Labo%208/subpaginas/"
+             </li>
          </ol>
      </li>
  </ul>
