--- a/Labo 8/subpaginas/Opdracht Cocktailbar.html
+++ b/Labo 8/subpaginas/Opdracht Cocktailbar.html
@@ -1,15 +1,26 @@
 ﻿<!DOCTYPE HTML>
-<html  lang="en">
+<html  lang="nl">
   <head>
     <title>Cocktail-bar</title>
+    <link rel="stylesheet" type="text/css" href="../Styles/Stijl%20opdracht%20cocktailbar.css">
   <style>
+      #guarantee {margin: 30px;
+      padding: 20px;
+      color: #444444;
+      background-color: #a7cece;
+      border: dot-dash;
+      border-color: white;
+      background-image: url(../Images/star.svg);
+      background-repeat: no-repeat;
+      background-position: left;
+      padding-left: 1em}
   </style>
   </head>
   <body>
       <header>
-          <p><img src="../Images/cocktails.png" alt="Cocktail Bar"/></p>
+          <p><img class="headerimage" src="../Images/cocktails.png" alt="Cocktail Bar"/></p>
       </header>
-      <article>
+      <article class="weeklyspecials">
           <h1>Weekly  Specials</h1>
           <p>
               <img src="../Images/yellow.gif" alt="Lemon Breeze Elixir"/>
@@ -97,7 +108,7 @@
               Enjoy.
           </p>
           <ul>
-              <li>Buddha Bar, Claude Challe</li>
+              <li><span class="cursief">Buddha Bar</span>, <span class="vet">Claude Challe</span></li>
               <li>When It Falls,Zero 7</li>
               <li>Earth 7, L.T.J. Bukem</li>
               <li>Le Roi Est Mort, Vive Le Roi!, Engima</li>
