--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                  <a href="Labo%208/subpaginas/Opdracht%20Lorem%20Ipsum%20met%20extra%20space.html">Opdracht Lorem Ipsum met extra space</a>
              </li>
              <li>
-                 <a href="Labo%208/subpaginas/"
+                 <a href="Labo%208/subpaginas/Opdracht%20Cocktailbar.html">Opdracht Cocktailbar</a>
              </li>
          </ol>
      </li>
