--- a/Labo 8/subpaginas/Opdracht 3.html
+++ b/Labo 8/subpaginas/Opdracht 3.html
@@ -8,7 +8,13 @@
 <h1>Opdracht 3</h1>
 <p>
     De tekst in de blokken staat horizontaal gecentreerd omdat er in het css bestand staat <br>
-    dat alle tekst in een div centraal moet staan.
+    dat alle tekst in een div centraal moet staan. <br>
+    <br>
+    Je kan line-height gebruiken maar dan moet de hoogte van het element gelijk zijn aan de line-height.<br>
+    Je kan display: table-cell en vertical-align: middle gebruiken, <br>
+    dit werkt goed voor het centreren van meerdere regels tekst binnen een container.
+    <br><br>
+    De regel voor class'tall' krijgt voorrang omdat deze specifieker is.
 </p>
 
 <a href="../../index.html">Terug naar hoofdpagina</a>
