--- a/Labo 8/subpaginas/Opdracht Lorem Ipsum met extra space.html
+++ b/Labo 8/subpaginas/Opdracht Lorem Ipsum met extra space.html
@@ -20,5 +20,7 @@
         Sed blandit blandit lobortis. Aenean a augue enim. Aliquam erat volutpat.
         Donec ultrices odio eu est pretium, posuere tristique elit dapibus.
 </div>
+
+<a href="../../index.html">Terug naar hoofdpagina</a>
 </body>
 </html>
