--- a/Labo 8/subpaginas/Opdracht Cocktailbar.html
+++ b/Labo 8/subpaginas/Opdracht Cocktailbar.html
@@ -8,7 +8,7 @@
       padding: 20px;
       color: #444444;
       background-color: #a7cece;
-      border: dot-dash;
+      border-style: dotted;
       border-color: white;
       background-image: url(../Images/star.svg);
       background-repeat: no-repeat;
