--- a/Labo 9/Subpaginas/Opdracht airbus.html
+++ b/Labo 9/Subpaginas/Opdracht airbus.html
@@ -3,16 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Airbus Webpagina</title>
+	<link rel="stylesheet" type="text/css" href="../Styles/Stijl%20opdracht%20airbus.css">
 </head>
 
 <body>
-	<div> <!-- top -->
+	<div class="top"> <!-- top -->
 		<p>AIRBUS - A380</p>
 		<p>Het grootste passagiersvliegtuig ter wereld </p>
-		<img src="../Images/tekklein.png" alt="tekening van vliegtuig" />
+		<img class="image-container" src="../Images/tekklein.png" alt="tekening van vliegtuig" />
     </div>
 	
-    <div> <!-- news -->
+    <article class="news"> <!-- news -->
 		<h3>Eerste vlucht</h3>
 		<p>Het toestel maakte zijn eerste trans-Atlantische vlucht met passagiers op 19 maart 2007 tussen
 			 Frankfurt am Main en New York.
@@ -31,15 +32,15 @@
 		<p>Een Airbus A380 van Air France raakte tijdens het taxiën naar de startbaan op John F. Kennedy
 			 International Airport met zijn vleugel de staart van een Bombardier CRJ700 van Comair.
 		</p>
-    </div>
+    </article>
 	
-    <div> <!-- main -->
+    <main> <!-- main -->
 	
-        <div> <!-- logo -->
+        <div class="logo"> <!-- logo -->
 			<img src="../Images/airbus_logo.jpg" alt="Het logo van airbus" />
         </div>
 		
-        <div> <!-- introduction -->
+        <article class="introduction"> <!-- introduction -->
 			<p><b>De Airbus A380</b> is het grootste passagiersvliegtuig ter wereld. Het is
 			   een product van het Europese concern Airbus. Het widebody-vliegtuig beschikt over twee
 			   verdiepingen, waardoor het maximaal 853 passagiers kan herbergen. Bij een gemiddelde configuratie
@@ -50,9 +51,9 @@
 			   toestel werd onderhouden. </span> Anno april 2011 hebben vijf luchtvaartmaatschappijen 47
 			   vliegtuigen van dit type in dienst.
 			</p>
-		</div>
+		</article>
 		
-		<div> <!-- gallery -->
+		<div class="gallery"> <!-- gallery -->
 			<div class="foto">
 			  <img src="../Images/A380Grond.JPG" alt="Foto vliegtuig op de grond" />
 			</div>
@@ -81,11 +82,11 @@
 			  <img src="../Images/abramovich.jpg" alt="foto"/>
 			</div> 
 		</div>
-	</div>
+	</main>
 	
-    <div> <!-- bottom -->
+    <section class="bottom"> <!-- bottom -->
 	
-		<div> <!-- block -->
+		<div class="block"> <!-- block -->
 			<ul>
 			  <li> Manchester </li>
 			  <li> Toulouse 
@@ -98,7 +99,7 @@
 			</ul>
 		</div>
 		
-		<div> <!-- block -->
+		<div class="block"> <!-- block -->
 			<ul>
 			  <li> Documentary </li>
 			  <li> Aircrafts 
@@ -110,11 +111,11 @@
 			   <li> A380 - 800 </li>
 			</ul>
 		</div>
-    </div>
+    </section>
 	
-	<div> <!-- copyright -->
+	<footer> <!-- copyright -->
 		<p>&lt; &copy; Airbus A380 &gt;</p>
-	</div>
+	</footer>
 	
 </body>
 </html>
