--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 9</h2>
+         <ol>
+             <li>
+                 <a href="Labo%209/Subpaginas/Opdracht%20positioneren%20images.html">Opdracht Positioneren images</a>
+             </li>
+             <li>
+                 <a href="Labo%209/Subpaginas/Opdracht%20airbus.html">opdracht Airbus</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
