--- a/Labo 10/Subpaginas/Oefeningen Bootstrap/Oefening 1.html
+++ b/Labo 10/Subpaginas/Oefeningen Bootstrap/Oefening 1.html
@@ -16,20 +16,22 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">1</div>
-            <div class="col-md-6">2</div>
-            <div class="col-md-3">3</div>
-
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col"></div>
         </div>
         <div class="row">
-            <div class="col-md-3">4</div>
-            <div class="col-md-6">5</div>
-            <div class="col-md-3">6</div>
+            <div class="col-2"></div>
+            <div class="col-8"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-7"></div>
+            <div class="col"></div>
         </div>
 
-        <article>
-            <h1>Cursus CSS</h1>
-        </article>
+
     </div>
 </body>
 </html>
