--- a/index.html
+++ b/index.html
@@ -165,6 +165,26 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 10</h2>
+         <ol>
+             <li>
+                 <a href="Labo%2010/Subpaginas/Oefening%20MediaQueries.html">Opdracht Media Queries</a>
+             </li>
+             <li>
+                 <a href="Labo%2010/Subpaginas/Oefeningen%20Bootstrap/Oefening%201.html">Opdracht 1</a>
+             </li>
+             <li>
+                 <a href="Labo%2010/Subpaginas/Oefeningen%20Bootstrap/Oefening%202.html">Opdracht 2</a>
+             </li>
+             <li>
+                 <a href="Labo%2010/Subpaginas/Oefeningen%20Bootstrap/Opdracht%20Mondriaan.html">Opdracht Mondriaan</a>
+             </li>
+             <li>
+                 <a href="Labo%2010/Subpaginas/Oefeningen%20Bootstrap/Personal%20Homepage.html">Personal Homepage</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
